Simpler usage of persistence and database layers